fix scrollbars on theme picker

--- a/src/popup.css
+++ b/src/popup.css
@@ -226,7 +226,7 @@
 }
 
 .themePopup {
-    overflow-y: scroll;
+    overflow-y: hidden;
     display: flex;
     flex-direction: column;
 
